objects/zqu__HostedPageLiteSetting__c.object
<CustomObject>
    <fields>
        <fullName>zqu__ComponentName__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this payment page setting will be used as a default for any payment page components that are not provided with a page Id.</description>
        <inlineHelpText>If checked, this payment page setting will be used as a default for any payment page components that are not provided with a page Id.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Height__c</fullName>
        <defaultValue>&quot;450px&quot;</defaultValue>
        <description>The height of the iFrame</description>
        <inlineHelpText>The height of the iFrame</inlineHelpText>
        <label>iFrame Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__PageId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Id of the Payment Page in Zuora.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Id of the Payment Page in Zuora.</inlineHelpText>
        <label>Page Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__PaymentMethodType__c</fullName>
        <label>Payment Method Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Width__c</fullName>
        <defaultValue>&quot;600px&quot;</defaultValue>
        <description>The width of the iFrame</description>
        <inlineHelpText>The width of the iFrame</inlineHelpText>
        <label>iFrame Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Payment Pages Setting</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <columns>zqu__PageId__c</columns>
        <columns>zqu__PaymentMethodType__c</columns>
        <columns>zqu__ComponentName__c</columns>
        <columns>zqu__Width__c</columns>
        <columns>zqu__Height__c</columns>
        <columns>zqu__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Pages Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Pages Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>